<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="uv_loading">Loading…</string>
    <string name="uv_submit_idea">Submit idea</string>
    <string name="uv_idea_form_title">Post an idea</string>
    <string name="uv_menu_search">Search</string>
    <string name="uv_email_address">Email address</string>
    <string name="uv_email_address_hint">your@email.com (required)</string>
    <string name="uv_display_name">Display name</string>
    <string name="uv_password">Password</string>
    <string name="uv_forgot_password">Forgot password</string>
    <string name="uv_msg_comment_posted">Your comment has been posted</string>
    <string name="uv_title_idea">Idea</string>
    <string name="uv_posted_by_format">Posted by %1$s on %2$s</string>
    <string name="uv_all_articles">All Articles</string>
    <string name="uv_portal_title">Help</string>
    <string name="uv_network_error">There was an error connecting to UserVoice</string>
    <string name="uv_signin_dialog_title">Sign in</string>
    <string name="uv_signin_dialog_ok">Sign in</string>
    <string name="uv_failed_signin_error">Incorrect email or password</string>
    <string name="uv_msg_forgot_password">Forgot password email sent</string>
    <string name="uv_subscribe_dialog_title">Subscribe to this idea</string>
    <string name="uv_remove_votes">Remove Votes</string>
    <string name="uv_feedback_forum">Feedback Forum</string>
    <string name="uv_knowledge_base">Knowledge Base</string>
    <string name="uv_admin_response_format">Admin response: %1$s</string>
    <string name="uv_post_comment">Post comment</string>
    <string name="uv_next">Next</string>
    <string name="uv_none_of_these_help">None of these help</string>
    <string name="uv_send_message">Send message</string>
    <string name="uv_your_email_address">Your email address</string>
    <string name="uv_your_name">Your name</string>
    <string name="uv_name_hint">“Anonymous”</string>
    <string name="uv_select_one">Select one</string>
    <string name="uv_value">Value</string>
    <string name="uv_article">Article</string>
    <string name="uv_idea">Idea</string>
    <string name="uv_msg_ticket_created">Your message has been sent</string>
    <string name="uv_msg_idea_created">Your idea has been created</string>
    <string name="uv_article_instant_answer_question">Is this article helpful?</string>
    <string name="uv_suggestion_instant_answer_question">Is this idea helpful?</string>
    <string name="uv_no">No</string>
    <string name="uv_yes">Yes</string>
    <string name="uv_very_yes">Yes!</string>
    <string name="uv_helpful_article_message_question">Do you still want to send a message?</string>
    <string name="uv_unhelpful_article_message_question">Would you like to send us a message?</string>
    <string name="uv_idea_description_heading">Describe your idea in more detail</string>
    <string name="uv_category">Category</string>
    <string name="uv_idea_description_hint">(optional)</string>
    <string name="uv_idea_text_heading">I suggest you…</string>
    <string name="uv_idea_text_hint">Enter your idea…</string>
    <string name="uv_idea_form_help">"When you post an idea on our forum, others will be able to subscribe to it and make comments. When we respond to the idea, you'll get notified."</string>
    <string name="uv_contact_us">Contact us</string>
    <string name="uv_close">Close</string>
    <string name="uv_new_comment">New comment</string>
    <string name="uv_error">Error</string>
    <string name="uv_msg_user_identity_validation">Please enter your email address</string>
    <string name="uv_status_format">Status: %1$s</string>
    <string name="uv_subscribe">Subscribe</string>
    <string name="uv_nevermind">Nevermind</string>
    <string name="uv_msg_subscribe">"We'll update you as this idea progresses."</string>
    <string name="uv_msg_subscribe_success">You have been subscribed to this idea.</string>
    <string name="uv_msg_unsubscribe">You have been unsubscribed from this idea.</string>
    <string name="uv_msg_custom_fields_validation">Please fill out all required fields.</string>
    <string name="uv_contact_hint">Enter your question or feedback</string>
    <string name="uv_matching_ideas">Matching ideas</string>
    <string name="uv_matching_articles">Matching articles</string>
    <string name="uv_matching_articles_and_ideas">Matching articles and ideas</string>
    <string name="uv_post_idea_continue_button">I still want to post my idea</string>
    <string name="uv_contact_continue_button">I still want to send a message</string>
    <string name="uv_i_want_this">I want this!</string>
    <string name="uv_post_a_comment">Post a comment</string>
    <string name="uv_all_results_filter">ALL</string>
    <string name="uv_articles_filter">ARTICLES</string>
    <string name="uv_ideas_filter">IDEAS</string>
    <string name="uv_comment_hint">Enter your comment</string>
    <string name="uv_cancel">Cancel</string>
    <string name="uv_select_none">(none)</string>
    <string name="uv_confirm">Confirm</string>
    <string name="uv_msg_confirm_discard_idea">Are you sure you want to discard your idea?</string>
    <string name="uv_msg_confirm_discard_message">Are you sure you want to discard your message?</string>
    <string name="uv_post_an_idea">Post an idea</string>
    <string name="uv_password_dialog_title">Please enter your password</string>
    <string name="uv_article_browse_question">Was this article helpful?</string>
    <string name="uv_thanks">Thanks!</string>
    <string name="uv_powered_by_uservoice">Powered by UserVoice</string>
    <string name="uv_android_sdk">Android SDK</string>
    <string name="uv_msg_bad_email_format">Please enter a valid email address.</string>
    <string name="uv_ranked">Ranked %1$s</string>
    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Choose the Download Folder</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name %1$s?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
    <string name="changelog_internal_error_parsing">Error while parsing file</string>
    <string name="changelog_internal_error_internet_connection">No internet connection to fetch the changelog</string>
    <string name="changelog_header_version">"Version "</string>
    <string name="changelog_row_bulletpoint">•</string>
    <string name="changelog_row_prefix_bug">[b]Bug:[/b]</string>
    <string name="changelog_row_prefix_improvement">[b]New:[/b]</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">crumby</string>
    <string name="derpibooru_account">Derpibooru</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Image Galleries...</string>
    <string name="metadata_bottom">true</string>
    <string name="danbooru_argument">tags</string>
    <string name="derpibooru_argument">sbq</string>
    <string name="danbooru_pool_argument">search[name_matches]</string>
    <string name="imgur_argument">q</string>
    <string name="e621_pool_argument">query</string>
    <string name="tumblr_argument">tagged</string>
</resources>
